The 'make' command needs to grab the whole stack, not just switches that contain ports in the new VLAN: we might need to transit switches 'in the middle'.
I'm starting to think that the way we built up list of switches for
the commands is not the right thing to be doing - almost all of the
operations operate on whole stacks now, so we just have extra work to
do to convert stack names into switch names and back. Or, at the very
least, we need  a simpler way to compute (and store) the set of
switches that a VLAN has to transit.

--- a/tbsetup/snmpit.in
+++ b/tbsetup/snmpit.in
@@ -532,9 +532,21 @@ COMMAND: foreach my $command (@commands) {
 			   @supplied_switches : getTestSwitches();
 	    last;
 	};
-	(/listports/ || /make/ ) && do {
+	(/listports/) && do {
 	    @devicenames = $supplied_switches? @supplied_switches :
 	    (@ports? getDeviceNames(@ports) : getTestSwitches());
+	    last;
+	};
+	( /make/ ) && do {
+            if ($supplied_switches) {
+                @devicenames = @supplied_switches;
+            } elsif (@ports) {
+                # Have to operate on whole stacks so that trunks work
+                @devicenames =
+                    getSwitchesInStacks(getStacksForSwitches(getDeviceNames(@ports)));
+            } else {
+                @devicenames = getTestSwitches();
+            }
 	    last;
 	};
         (/remove/) && do {
